# CollateralScore

./: .env.example  .gitignore  README.md  inference_norm_rads.py  inference_segms.py  main.py  pyproject.toml
scripts/: download_nnunet_weights.py
